<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.antonioramos.blackjack.AboutActivity"
    tools:showIn="@layout/activity_about"
    android:background="#087A61">

    <TextView
        android:text="@string/developed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:id="@+id/textView4"
        android:textSize="45sp"
        android:textColor="#ffffff" />

    <TextView
        android:text="@string/and"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView6"
        android:textSize="30sp"
        android:textColor="#ffffff" />

    <TextView
        android:text="@string/larson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textSize="25sp"
        android:layout_below="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="38dp"
        android:textColor="#ffffff" />

    <TextView
        android:text="@string/antonio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:id="@+id/textView5"
        android:textSize="25sp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:textColor="#ffffff" />

    <TextView
        android:text="@string/ramos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textSize="25sp"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:textColor="#ffffff" />

    <TextView
        android:text="@string/gary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="25sp"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignEnd="@+id/textView4"
        android:textColor="#ffffff" />
</RelativeLayout>
